@@ -6,25 +6,27 @@ AUX opendkim.init.r3 1545 SHA256 63f316ef776ad1a9fe87cff7748fac4574c2355b6205e3e
 DIST opendkim-2.8.3.tar.gz 1182214 SHA256 eb36003b0d2d7514312c65db2b45afd9ce4d02744fbf4b2fe6f8e1e2893ce989 SHA512 bf2b824a4b8c7b32755fefa0d6a5fd608da59f254722d2ad52b6eda4a8710e4d22b95cfe2a85df711e3e9a0b62fd319f88afa7a86d319be4568d0de0f9c6634f WHIRLPOOL 52ad1d85fb4087c8f1a9afb4ec8cc8550016f85b7578954f1ddc02204c3440c742e3d8175560eebb514180c1deb128d500bd4fa6848fe37f3acae628a38307aa
 DIST opendkim-2.8.4.tar.gz 1177118 SHA256 d6ea32f60e750530359841da1e1bd644e6ccb0d228ad5e0633be6dfb8434b30a SHA512 a65e2cbe46878707072aceb5fa60d70d527fda9679aac5c9083b24f1697ba6fe566d9bd7bfca6a23443f639fc27b843e098b5a6b1750347c045f028dd76dc21d WHIRLPOOL b93310e27bfa38326f431ae44ab88d1c6ffddec2d81be1acfce5e3f275ea0e9f8b67eb25715ffb8d5b2c5311766a8ec0236e1e7ee4dc2ee3d0910946654cb550
 DIST opendkim-2.9.0.tar.gz 1134646 SHA256 dc1559d6302bf0f3963b93c399d18728431b5c6fb2f0a1bbebd8651a1998e497 SHA512 102224bf232197974b86c251e7463843032d87610c6c35c1ee494fa4648a0cca5b1eda684b56784b70ad6cbd6f8de6e8163b0513c6487a3fdb79639b05535735 WHIRLPOOL 40c15435e5da994b55b5197f79d7fae15df0c9d5bb6eaf29d6c627ffbaf5f5f21da9a4f08a519a036d8219094cbadab08deaccb816ff6c787f2dcc6c9c8a6723
+DIST opendkim-2.9.1.tar.gz 1227972 SHA256 da746a804e4e88b4046d30a496bc8fefaa097bc25df937145372b06e11fd8323 SHA512 c33e67f3c4fafb1aa1d8a5f2befd044f94bd8f842326f2d52ac3b01cf5c653425a76fafdfe1fb5def966ff25823fb605a6250396a5056dc911dd3b7dd8825619 WHIRLPOOL 83d6ee4325d6a7f166f41c15ff6ee6f35ab281267d2df54e8966e437b6e863bbd42c44080d4b9bfec84680baa7b8ce9e4687a3933e2b28c3e0384432111c0a6f
 EBUILD opendkim-2.8.3.ebuild 6180 SHA256 fcc228e86094dc764f35d34dd531b3e6e16b272f0202e448a6128ef9be9d0dd8 SHA512 b66f1058127da147146ba0113e8afc6b0eb92e16998d04636bb2fc12674935e1e52e30b4c8622737de5a40a1876b1288a513d8b1e7b2ce91f6535e50fda0102e WHIRLPOOL 7977141d202070e84368b8de43b1f449b52aae45a58a6594e08f8c0b985acbb11175da3f69bad0e28666617ff8bc2dd9a00b6884311de97bb49e75a4f9cf032f
 EBUILD opendkim-2.8.4.ebuild 6165 SHA256 508d53555a2cc88bf5396c27a3b9edf8f6c109fec4e7cad9703128a1968a49a1 SHA512 977f6ac3f3b30091859d3e477ec72d34541ac598e8c8ede3d41d1c54c4555d6c260b48622b4913a5fa5c607520b14b2566beaca544cddd12c729e256187742c3 WHIRLPOOL eec69a73f3bf4acf5817e7575173237d3d63b5c8579542f8796418c7cf5705d44ebbe0f0b030c9625f84206aa6e0ee2708f550fa2ec7a329a650012c8e14abbd
 EBUILD opendkim-2.9.0.ebuild 6040 SHA256 52bc8517a49b1af387e7abac1fc5849c1d42479816772123e01249e71a38870e SHA512 4a9c6beb2440a3fc1c669ec5cca1ba1642f49660b1236a331e6aefe51978d2f536841f0ff3915e0990397e670f6ad2a9d85f15b56af6ab623d76d7c18dd3dd55 WHIRLPOOL bae2f9c05c50e30d9f5ec2447a9e973273b865eff4083c0f511d431b9cc2cd40de5be51abd10c98edd9e821ae2a5dd82d41cde5a54af5308d9999a7bdc439e84
-MISC ChangeLog 13002 SHA256 f07374b33a65e28283e22e34561603301521bc15bd9abf6bf5a4c5d9401ea23e SHA512 e894a2b2b274078851ae2303a0ceff0bc5060a38c9b4b282cec07adc9d54409f510a0fd6e47df7cadc49694329fdb71f3f268e3a29099abbe07f830f1f76c0fa WHIRLPOOL 03370e31f894182059dadfe8a8fd2ce2d3a2907bda34490ad7b7c3fcb194aa12ae53d956b3b472df153d875ceb9b141f338db34a1ade27ff876d07ae8b229b26
-MISC metadata.xml 1332 SHA256 c1e6b0840b71e1fd07b10d983e414abfce8307095c3ff990362fc571d5b2f01d SHA512 2245a94573171993bb958f2beb6a5dfc738ef9878b7795747e3e0bf689801af756540f561b5d0bd7c93ce02fe66efad7a9b018976a81c7bdaf3849b634f22ec2 WHIRLPOOL a3b25a8495638a9815347ccb297848b8ebde0a9f0cf4093507750784c2732995fc0cd048a051197dc4f6d9acd3115d0c2cbb7fa2321933f8c0ab11158feadfd1
+EBUILD opendkim-2.9.1.ebuild 6400 SHA256 fc43662b4b1b425877998544acbc284e05658bb44b1c146f8b9344e710029b45 SHA512 31b9f03df42c8db29e57488e3115f67c7476db0b4719d39c43b630402ad79cc1db648ef868628e1edc92c21ff6bca27b0bccee15a9a630266f8557ef7d4c631c WHIRLPOOL de9a2f321f8b730237343079b4b0835f50f90624798dcd1624ec715894d6d020ea29b60f157ca31169f35adb25e0529925463ef40f439debea3f4294b34b1117
+MISC ChangeLog 13147 SHA256 7f1eb38d2f0ce916848e5bbb36c08e877176cfdae886fb761e652e998fbd4ccd SHA512 37be250aea32f922d823257f1e37135d586c6e09d5697585a5bbdd376a670cf35eff632b0030e69bfbcc75057cccf950d8129b0a3d05892d92a89eca079d6d0b WHIRLPOOL 52d3f5cd17f21d40f9736141dcc56d598830d461739abd3d6c6f2c30167cbe842e942a17761d734a9a8d90879750ce758dd67772d8b987002f06b02d68fc7299
+MISC metadata.xml 1403 SHA256 85ffb9c9df1fd60d7f22db45e8d4b1edb2b882dd0fb2004a646651e4f7e675a8 SHA512 b7529c54897e04109deeeb30414ab175de5989baeeb398042995fa193ec0302bbc74a43037550c4a2dc60e490443eeaa4bcb038229b1ea179f70e32e27bdf37a WHIRLPOOL 862f684ef7c3d6f40d5b95eca699e003f0085c62cef406c54a307d4be3d8a847582c2bc3c68eb0208e072b506162a27bde6115fcfad548b1865bee7f033ae371
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSpwh3AAoJEHfx8XVYajsfgA8P/iF1BPrSxGEDBzsFNZ0i1Ti8
-4ucb9cGrIabuNhH7XrKq1ocCV1XHapRpc/EZn1Wr8hEWDFEHWuQRBaxFxnOvW/fE
-sk2ZZ0aXs+F4gt7q9RXXqg9fl8YpVYsbGxMrLLISJZMe4j5D/SiZvleyWLSDu1rZ
-ISvJzeI11EwbCwBPEpplsDzO3Urf+SzFHOWA3ycXlhFMBkGZrJbXBxX/B15BK6xB
-MgkVJ6S2Uddz1Pg4L7f8060YC9r4xkDm438MSPPl0jUJQji9er5Hi8OTbiKxNAhE
-hTEOL4ZYIQ0gdxJqt4DUdE0R0GVVqFRm+j95ng0R4KG1ykynuZEkbpX3tdkrDUlk
-/CoENBmvZxwEy3LC5uDyHHSGd3gYk8eIv++FWrTdjC4YsTvVzXR0Dm0edJCVG5Tw
-j8kgqwKSGPRx4ry1wV73tEk//pTmkQTrEgzZFKIe5bJdCYXfIK42JIS9ItXFd7Hj
-VRRGr22iWEZfY+uwHcdMnVTMhrYLGlvPFOqKwR5yBKtDSEpYkKA7X09GW+Qif/mm
-9GTpPVqSE8XIfzoXx+MkaIl5YZ+TvvmwtLsxRAT25abEleIONK+reGsDeN24aIJO
-WFOuw6QISfy5aSe0IX3Ws+wWX2PpiiO2bWO6Ja0rhRT+gymcxZELa/FrwEOLNzOf
-exbPtUAPImOSijhrYT6F
-=wfWJ
+iQIcBAEBCAAGBQJTKWpbAAoJEHfx8XVYajsfNJYP/3sBhkSRjxNUzJRWjXq0MuzY
+LLdqQlpdBos5ZHRGNcySCqEiiRWk65YNjIteh5F7ydCVY7Q6KzPhf8o/iKH1Mo40
+ayrUCvXX7cPMbxzFOxRBE0S9uveI+56Zl8ldPlltiV7a2Afq7BecS5WEbUA9gget
+qizme4Jlf71ps5HA/gbR8Q2HhmVL1cfO0PpWeqvvGIw+u6UgtGGff3cFnh/K360F
+PAyVTl0aKWwsdGJgJUrFPJtHjbkK1WI+MYdjefUu2o2NYywW/gquIuG3iPiglt8a
+5rErdBCuTwpP95WEubuzYQcjoHFHBbhi6ASXLfx97No9+gleD435mZrT6o1s0nfS
+4jsc5JlBeUJNmqRZzDGwgy7ya0rIAi5CL0tlILSvF/UX/42Lj+fA6Lbzy86ks9fX
+6ug7CipMNAT9Me9iXzLg3RdWJq26jH4wm7Hx5ifo7YsHOAdfqaaA512jfBhfqP/S
+ZBLCMDmpXiShNrJ/PoiH8vgdhhR4muFUG5rawf/pmVcc82aTx+Cy2zt9bkMSLiIv
+N8iFOn1vVovJRKT3eCatNB/sc/7pC9odQWJujGJpQhCq4LsIeUndmDbegxQivFjf
+7K/5vHCaA1BSOynpNUBHjvPlE0g8t3Po5q9G3QW8vytAFFMrRtlvv0H9F5XRqiON
+G3lZ0G31PQhvjSws/Ey/
+=EZsU
 -----END PGP SIGNATURE-----
