@@ -1,0 +1,14 @@
+DEFINED_PHASES=config configure install postinst prepare setup
+DEPEND=|| ( mail-filter/libmilter mail-mta/sendmail ) dev-libs/libbsd ssl? ( >=dev-libs/openssl-0.9.8 ) berkdb? ( >=sys-libs/db-3.2 ) opendbx? ( >=dev-db/opendbx-1.4.0 ) lua? ( dev-lang/lua ) ldap? ( net-nds/openldap ) lmdb? ( dev-db/lmdb ) memcached? ( dev-libs/libmemcached ) sasl? ( dev-libs/cyrus-sasl ) selinux? ( sec-policy/selinux-dkim ) unbound? ( >=net-dns/unbound-1.4.1 net-dns/dnssec-root ) !unbound? ( net-libs/ldns ) gnutls? ( >=net-libs/gnutls-2.11.7 ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=A milter-based application to provide DKIM signing and verification
+EAPI=5
+HOMEPAGE=http://opendkim.org
+IUSE=+berkdb gnutls ldap lmdb lua memcached opendbx poll sasl selinux +ssl static-libs unbound
+KEYWORDS=~amd64 ~x86
+LICENSE=Sendmail-Open-Source BSD
+RDEPEND=|| ( mail-filter/libmilter mail-mta/sendmail ) dev-libs/libbsd ssl? ( >=dev-libs/openssl-0.9.8 ) berkdb? ( >=sys-libs/db-3.2 ) opendbx? ( >=dev-db/opendbx-1.4.0 ) lua? ( dev-lang/lua ) ldap? ( net-nds/openldap ) lmdb? ( dev-db/lmdb ) memcached? ( dev-libs/libmemcached ) sasl? ( dev-libs/cyrus-sasl ) selinux? ( sec-policy/selinux-dkim ) unbound? ( >=net-dns/unbound-1.4.1 net-dns/dnssec-root ) !unbound? ( net-libs/ldns ) gnutls? ( >=net-libs/gnutls-2.11.7 ) sys-process/psmisc
+REQUIRED_USE=sasl? ( ldap )
+SLOT=0
+SRC_URI=mirror://sourceforge/opendkim/opendkim-2.9.1.tar.gz
+_eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	db-use	1c719875d6599536f956fafea9e1f404	eutils	af81d52c25ec93fbdff71e0efb0de7b7	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=6ec5beb4d6214360a146d0880178b800
