@@ -1,6 +1,12 @@
 # ChangeLog for mail-filter/opendkim
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/opendkim/ChangeLog,v 1.73 2013/12/10 12:26:21 eras Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/opendkim/ChangeLog,v 1.74 2014/03/19 09:58:42 eras Exp $
+
+*opendkim-2.9.1 (19 Mar 2014)
+
+  19 Mar 2014; Eray Aslan <eras@gentoo.org> +opendkim-2.9.1.ebuild,
+  metadata.xml:
+  Version bump - bug #504930
 
 *opendkim-2.9.0 (10 Dec 2013)
 
